--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>5.1.14</version>
             <scope>test</scope>
         </dependency>
+     <dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.2.121</version>
+</dependency>
   </dependencies>
 
   <distributionManagement>
