--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala.version>2.8.1</scala.version>
+    <scala.version>2.9.0</scala.version>
   </properties>
 
 <!--
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.scala-tools.testing</groupId>
       <artifactId>specs_${scala.version}</artifactId>
-      <version>1.6.6</version>
+      <version>1.6.8</version>
       <scope>test</scope>
     </dependency>
       <dependency>
@@ -69,11 +69,12 @@
             <version>5.1.14</version>
             <scope>test</scope>
         </dependency>
-     <dependency>
-    <groupId>com.h2database</groupId>
-    <artifactId>h2</artifactId>
-    <version>1.2.121</version>
-</dependency>
+         <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.2.121</version>
+                <scope>test</scope>
+        </dependency>
   </dependencies>
 
   <distributionManagement>
